--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,56 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 <h1>Football News</h1>
 
-<h5>NPM: </h5>
+<h5>NPM:</h5>
 <p>{{ npm }}</p>
-<h5>Name: </h5>
+
+<h5>Name:</h5>
 <p>{{ name }}</p>
-<h5>Class: </h5>
+
+<h5>Class:</h5>
 <p>{{ class }}</p>
+
+<p>
+  <a href="{% url 'main:create_news' %}">
+    <button type="button">+ Add News</button>
+  </a>
+</p>
+
+<hr>
+
+{% if not news_list %}
+  <p>No news data available in Football News.</p>
+{% else %}
+  {% for news in news_list %}
+    <div>
+      <h2><a href="{% url 'main:show_news' news.id %}">{{ news.title }}</a></h2>
+
+      <p>
+        <b>{{ news.get_category_display }}</b>
+        {% if news.is_featured %} | <b>Featured</b>{% endif %}
+        {% if news.is_news_hot %} | <b>Hot</b>{% endif %}
+        | <i>{{ news.created_at|date:"d M Y H:i" }}</i>
+        | Views: {{ news.news_views }}
+      </p>
+
+      {% if news.thumbnail %}
+        {# If thumbnail is a static path like 'main/file.jpg', use the static tag below.
+           If it's a full URL, switch back to src="{{ news.thumbnail }}" #}
+        <img src="{% static news.thumbnail %}" alt="thumbnail" width="150" height="100"><br>
+      {% endif %}
+
+      <p>{{ news.content|truncatewords:25 }}...</p>
+
+      <p>
+        <a href="{% url 'main:show_news' news.id %}">
+          <button type="button">Read More</button>
+        </a>
+      </p>
+    </div>
+
+    <hr>
+  {% endfor %}
+{% endif %}
+{% endblock %}
