--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -18,7 +18,24 @@
   </a>
 </p>
 
+<p>
+  <a href="{% url 'main:logout' %}">
+    <button>Logout</button>
+  </a>
+</p>
+
+<h5>Last login session: {{ last_login }}</h5>
+
 <hr>
+
+<p>
+  <a href="?filter=all">
+    <button type="button">All Articles</button>
+  </a>
+  <a href="?filter=my">
+    <button type="button">My Articles</button>
+  </a> 
+</p>
 
 {% if not news_list %}
   <p>No news data available in Football News.</p>
@@ -49,8 +66,6 @@
         </a>
       </p>
     </div>
-
-    <hr>
   {% endfor %}
 {% endif %}
 {% endblock %}
